Create delete endpoint
Can issue `DELETE /persons {"uid":"7000-0000-0000"}` to delete a person from the index

Fixes VEGA-1225 #minor
