# swagger.yml
@@ -9,6 +9,35 @@ paths:
         "404":
           description: Not found
   /persons:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a person
+      operationId: delete-person
+      parameters:
+      - in: body
+        name: body
+        required: true
+        schema:
+          properties:
+            uid:
+              format: string
+              pattern: ^\d{4}-\d{4}-\d{4}$
+              type: integer
+          type: object
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: The request has been handled and documents have been deleted
+          schema:
+            properties:
+              total:
+                format: int64
+                type: integer
+            type: object
+        "500":
+          description: Unexpected error occurred
     post:
       consumes:
       - application/json
